src/test/fun-test/semantic/AssignmentStrictConversion6.java.err
Semantic error: type mismatch - expected LONG, got DOUBLE, line 6, pos 15
