src/test/fun-test/semantic/AssignmentStrictConversion6.java
class Main {
    void main() {
        // "сужающее" преобразование, недопустимо
        double foo ;
        long bar;
        bar = foo;
    }
}